@@ -2,7 +2,7 @@ package de.jplag.java;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -20,6 +20,7 @@ import org.slf4j.Logger;
 
 import de.jplag.ParsingException;
 import de.jplag.Token;
+import de.jplag.util.FileUtils;
 
 import com.sun.source.tree.CompilationUnitTree;
 import com.sun.source.tree.LineMap;
@@ -35,21 +36,23 @@ public class JavacAdapter {
         var listener = new DiagnosticCollector<>();
 
         List<ParsingException> parsingExceptions = new ArrayList<>();
-        try (final StandardJavaFileManager fileManager = javac.getStandardFileManager(listener, null, StandardCharsets.UTF_8)) {
+        final Charset guessedCharset = FileUtils.detectCharsetFromMultiple(files);
+        try (final StandardJavaFileManager fileManager = javac.getStandardFileManager(listener, null, guessedCharset)) {
             var javaFiles = fileManager.getJavaFileObjectsFromFiles(files);
 
             // We need to disable annotation processing, see
             // https://stackoverflow.com/questions/72737445/system-java-compiler-behaves-different-depending-on-dependencies-defined-in-mave
-            final CompilationTask task = javac.getTask(null, fileManager, listener, List.of("-proc:none"), null, javaFiles);
+            final CompilationTask task = javac.getTask(null, fileManager, listener,
+                    List.of("-proc:none", "--enable-preview", "--release=" + JavaLanguage.JAVA_VERSION), null, javaFiles);
             final Trees trees = Trees.instance(task);
-            final SourcePositions positions = trees.getSourcePositions();
+            final SourcePositions positions = new FixedSourcePositions(trees.getSourcePositions());
             for (final CompilationUnitTree ast : executeCompilationTask(task, parser.logger)) {
                 File file = new File(ast.getSourceFile().toUri());
                 final LineMap map = ast.getLineMap();
                 var scanner = new TokenGeneratingTreeScanner(file, parser, map, positions, ast);
                 ast.accept(scanner, null);
                 parsingExceptions.addAll(scanner.getParsingExceptions());
-                parser.add(Token.fileEnd(file));
+                parser.add(Token.semanticFileEnd(file));
             }
         } catch (IOException exception) {
             throw new ParsingException(null, exception.getMessage(), exception);
@@ -73,8 +76,7 @@ public class JavacAdapter {
     private List<ParsingException> processErrors(Logger logger, DiagnosticCollector<Object> listener) {
         return listener.getDiagnostics().stream().filter(it -> it.getKind() == javax.tools.Diagnostic.Kind.ERROR).map(diagnosticItem -> {
             File file = null;
-            if (diagnosticItem.getSource() instanceof JavaFileObject) {
-                JavaFileObject fileObject = (JavaFileObject) diagnosticItem.getSource();
+            if (diagnosticItem.getSource() instanceof JavaFileObject fileObject) {
                 file = new File(fileObject.toUri());
             }
             logger.error("{}", diagnosticItem);
